--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,7 @@
         "friendsofphp/php-cs-fixer": "~2.16.0",
         "kunalvarma05/dropbox-php-sdk": "^0.2.1",
         "tightenco/collect": "5.2.*",
-        "ampache/ampacheapi-php": "^1.0",
-        "dropbox/dropbox-sdk": "^1.1"
+        "ampache/ampacheapi-php": "^1.0"
     },
 
     "repositories":
